[tool.poetry]
name = "dbt_lineage"
version = "0.1.0"
description = ""
authors = ["Felipe Aguirre Martinez <felipea@kometsales.com>"]

[tool.poetry.dependencies]
python = "^3.9"
graphviz = "^0.20.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {extras = ["jupyter"], version = "^22.8.0"}
isort = "^5.10.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
